allow deletion of unused licences
